fix: Migrate deprecated codes